// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarDateTimePicker componentWillReceiveProps() activeDates if !time 1`] = `
<div>
  <t
    mask={
      Array [
        /\\[0-9\\]/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    showMask={true}
    style={
      Object {
        "borderLeft": 0,
        "borderRight": 0,
      }
    }
    type="text"
    value="11/11/2000"
  />
  <div
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <SvgIcon
      file="calendar"
    />
  </div>
</div>
`;

exports[`CalendarDateTimePicker componentWillReceiveProps() activeDates if time 1`] = `
<div>
  <t
    mask={
      Array [
        /\\[0-9\\]/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        " ",
        /\\\\d/,
        /\\\\d/,
        ":",
        /\\\\d/,
        /\\\\d/,
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    showMask={true}
    style={
      Object {
        "borderLeft": 0,
        "borderRight": 0,
      }
    }
    type="text"
    value="10/01/2010 00:00"
  />
  <div
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <SvgIcon
      file="calendar"
    />
  </div>
</div>
`;

exports[`CalendarDateTimePicker componentWillReceiveProps() date 1`] = `
<div>
  <t
    mask={
      Array [
        /\\[0-9\\]/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        " ",
        /\\\\d/,
        /\\\\d/,
        ":",
        /\\\\d/,
        /\\\\d/,
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    showMask={true}
    style={
      Object {
        "borderLeft": 0,
        "borderRight": 0,
      }
    }
    type="text"
    value="11/06/2060 00:00"
  />
  <div
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <SvgIcon
      file="calendar"
    />
  </div>
</div>
`;

exports[`CalendarDateTimePicker componentWillReceiveProps() time 1`] = `
<div>
  <t
    mask={
      Array [
        /\\[0-9\\]/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        " ",
        /\\\\d/,
        /\\\\d/,
        ":",
        /\\\\d/,
        /\\\\d/,
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    showMask={true}
    style={
      Object {
        "borderLeft": 0,
        "borderRight": 0,
      }
    }
    type="text"
    value="31/01/2099 00:00"
  />
  <div
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <SvgIcon
      file="calendar"
    />
  </div>
</div>
`;

exports[`CalendarDateTimePicker render() basic 1`] = `
<div>
  <t
    mask={
      Array [
        /\\[0-9\\]/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        " ",
        /\\\\d/,
        /\\\\d/,
        ":",
        /\\\\d/,
        /\\\\d/,
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    showMask={true}
    style={
      Object {
        "borderLeft": 0,
        "borderRight": 0,
      }
    }
    type="text"
    value="08/10/2017 00:00"
  />
  <div
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <SvgIcon
      file="calendar"
    />
  </div>
</div>
`;

exports[`CalendarDateTimePicker render() if !time 1`] = `
<div>
  <t
    mask={
      Array [
        /\\[0-9\\]/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    showMask={true}
    style={
      Object {
        "borderLeft": 0,
        "borderRight": 0,
      }
    }
    type="text"
    value="08/10/2017"
  />
  <div
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <SvgIcon
      file="calendar"
    />
  </div>
</div>
`;

exports[`CalendarDateTimePicker render() if isCalendarShown 1`] = `
<div>
  <t
    mask={
      Array [
        /\\[0-9\\]/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        " ",
        /\\\\d/,
        /\\\\d/,
        ":",
        /\\\\d/,
        /\\\\d/,
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    showMask={true}
    style={
      Object {
        "borderLeft": 0,
        "borderRight": 0,
      }
    }
    type="text"
    value="08/10/2017 00:00"
  />
  <div
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <SvgIcon
      file="calendar"
    />
  </div>
  <CalendarDate
    activeDates={2017-10-07T18:00:00.000Z}
    date={2001-03-31T17:00:00.000Z}
    onChange={[Function]}
    onClickDay={[Function]}
    time={true}
  />
</div>
`;

exports[`CalendarDateTimePicker user interactions onChangeInputValue() 1`] = `
<div>
  <t
    mask={
      Array [
        /\\[0-9\\]/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        " ",
        /\\\\d/,
        /\\\\d/,
        ":",
        /\\\\d/,
        /\\\\d/,
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    showMask={true}
    style={
      Object {
        "borderLeft": 0,
        "borderRight": 0,
      }
    }
    type="text"
    value="10/12/2019 12:00"
  />
  <div
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <SvgIcon
      file="calendar"
    />
  </div>
  <CalendarDate
    activeDates={2009-02-09T18:00:00.000Z}
    date={2019-12-10T06:00:00.000Z}
    onChange={[Function]}
    onClickDay={[Function]}
    time={true}
  />
</div>
`;

exports[`CalendarDateTimePicker user interactions onClickInput() 1`] = `
<div>
  <t
    mask={
      Array [
        /\\[0-9\\]/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        "/",
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        /\\\\d/,
        " ",
        /\\\\d/,
        /\\\\d/,
        ":",
        /\\\\d/,
        /\\\\d/,
      ]
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyPress={[Function]}
    showMask={true}
    style={
      Object {
        "borderLeft": 0,
        "borderRight": 0,
      }
    }
    type="text"
    value="10/02/2009 00:00"
  />
  <div
    onClick={[Function]}
    style={
      Object {
        "display": "none",
      }
    }
  >
    <SvgIcon
      file="calendar"
    />
  </div>
  <CalendarDate
    activeDates={2009-02-09T18:00:00.000Z}
    date={1994-04-30T17:00:00.000Z}
    onChange={[Function]}
    onClickDay={[Function]}
    time={true}
  />
</div>
`;
